naming: index.html
Renaming portada.htm to index.html

--- a/sugerencias.htm
+++ b/sugerencias.htm
@@ -21,7 +21,7 @@
         <td width="27%" valign="top">  <table width="99%" border="1" cellpadding="1" cellspacing="2" bordercolor="#FFCC00">
           <tr>
             <td width="20"><img src="grafica/ico_espada.jpg" width="17" height="16"></td>
-            <td align="left" bgcolor="#000000" class="Estilo9"><a href="portada.htm" class="menu1">Inicio</a></td>
+            <td align="left" bgcolor="#000000" class="Estilo9"><a href="index.html" class="menu1">Inicio</a></td>
           </tr>
           <tr>
             <td height="23" bgcolor="#000000"><img src="grafica/ico_qerestu.gif" width="17" height="17"></td>
