--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ a:visited {
         <td width="24%" valign="top"><table width="99%" border="1" cellpadding="1" cellspacing="2" bordercolor="#FFCC00">
             <tr>
               <td width="20"><img src="grafica/ico_espada.jpg" width="17" height="16"></td>
-              <td align="left" valign="top" bgcolor="#000000" class="menu1"><a href="portada.htm" class="menu1">Inicio</a></td>
+              <td align="left" valign="top" bgcolor="#000000" class="menu1"><a href="index.html" class="menu1">Inicio</a></td>
             </tr>
             <tr>
               <td height="23" bgcolor="#000000"><img src="grafica/ico_qerestu.gif" width="17" height="17"></td>
