--- a/reuniones.htm
+++ b/reuniones.htm
@@ -18,7 +18,7 @@
             <table width="99%" border="1" cellpadding="1" cellspacing="2" bordercolor="#FFCC00">
               <tr align="left" class="boby3">
                 <td width="20"><img src="grafica/ico_espada.jpg" width="17" height="16"></td>
-                <td bgcolor="#000000" class="Estilo9"><a href="portada.htm" class="menu1">Inicio</a></td>
+                <td bgcolor="#000000" class="Estilo9"><a href="index.html" class="menu1">Inicio</a></td>
               </tr>
               <tr align="left" class="boby3">
                 <td height="23"><img src="grafica/ico_qerestu.gif" width="17" height="17"></td>
